force-app/main/default/objects/Contact/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The Contact&apos;s Current company</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>