force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>IF(
  $RecordType.Name = &quot;Client Contact&quot;,
  &quot;Client Contact&quot;,
  &quot;Candidate&quot;
)</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>