force-app/main/default/objects/Contact/fields/Work_History__c.field-meta.xml
<CustomField>
    <fullName>Work_History__c</fullName>
    <label>Work History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>